[package]
name = "image_writer_rs"
version = "1.0.2"
edition = "2024"
authors = ["Pawel Kraszewski <pawel@kraszewscy.net>"]
description = "Write bootable OS images to USB drive (dd on steroids)"
keywords = ["dd", "image", "disk"]
categories = ["command-line-utilities", "filesystem"]
repository = "https://github.com/p-kraszewski/image_writer_rs.git"
license = "BSD-2-Clause"

[dependencies]
indicatif = { version = "0.18" }
dialoguer = { version = "0.11" }
color-eyre = { version = "0.6" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
libc = { version = "0.2" }
sha2 = { version = "0.10" }

bzip2 = { version = "0.6" }
liblzma = { version = "0.4" }
flate2 = { version = "1.1" }
zstd = { version = "0.13" }
lz4_flex = { version = "0.11" }
